testsuite/tests/statmemprof/exception_callback_minor.reference
<<<<<<< HEAD
Exception from memprof.
||||||| 23e84b8c4d
Fatal error: exception File "exception_callback_minor.ml", line 16, characters 30-36: Assertion failed
=======
Exception from alloc_minor callback.
>>>>>>> d505d53be15ca18a648496b70604a7b4db15db2a
